// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Core functionality tests > Snapshots/Visual-Regression > should maintain visual consistency between expanded and collapsed states 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="container"
  >
    <div
      class="expandableBlock"
      data-testid="expandable-section-mock0"
      hidden=""
      id="expandable-section-mock0"
      tabindex="-1"
    />
    <button
      aria-controls="expandable-section-toggle-mock0"
      aria-expanded="false"
      class="toggle"
      data-testid="expandable-toggle-mock0"
      id="expandable-toggle-mock0"
      tabindex="0"
      type="button"
    >
      MOCK_COLLAPSE_PROMPT
    </button>
  </div>
</DocumentFragment>
`;

exports[`Core functionality tests > Snapshots/Visual-Regression > should maintain visual consistency between expanded and collapsed states 2`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="container"
  >
    <div
      class="expandableBlock"
      data-testid="expandable-section-mock2"
      id="expandable-section-mock2"
      tabindex="-1"
    />
    <button
      aria-controls="expandable-section-toggle-mock2"
      aria-expanded="true"
      class="toggle"
      data-testid="expandable-toggle-mock2"
      id="expandable-toggle-mock2"
      tabindex="0"
      type="button"
    >
      MOCK_EXPAND_PROMPT
    </button>
  </div>
</DocumentFragment>
`;
